# AMR_Perceptor

./: .env  README.md  docker-compose.yml  ros_agent_model.json  ros_agent_prompt_suggestions.json  run_llamacpp_docker.sh  run_mcp_docker.sh  run_open_webui_docker.sh  run_yolo_docker.sh
docker/: Dockerfile.llamacpp  Dockerfile.mcp  Dockerfile.yolo  build_llamacpp_docker.sh  build_mcp_server.sh  build_yolo_docker.sh  ros_entrypoint.sh
rospkg/amr_perceptor/: package.xml  setup.cfg  setup.py
rospkg/amr_perceptor/amr_perceptor/: camera.py  camera_resize.py  image_resize.py  pointcloud_downsample.py
rospkg/amr_perceptor/launch/: yolo.launch.py
