<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_perceptor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mic-732@todo.todo">mic-732</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>python3-pytest</test_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>orbbec_camera</depend>
  <depend>sllidar_ros2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
